<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Lone Trail</string>
    <string name="overview">Overview</string>
    <string name="details">The exploration of space will go ahead, whether we join in it or not, and it is one of the great adventures of all time, and no nation which expects to be the leader of other nations can expect to stay behind in the race for space.</string>
    <string name="subtitle">Table of Content</string>
    <string name="creator_title">The Name</string>
    <string name="creator_name">Bagas</string>
    <string name="creator_pen_name">{ KiSI }</string>
    <string name="about">About</string>
    <string name="about_details">I am Bagas Dwi Anggoro aka KiSI, a computer science student who is interested in challenging myself to gain new knowledge and develop my creativity in a fun way in the field of Illustration, Front-End, Motion, and Visual design</string>
    <string name="dicoding">Dicoding Account</string>
    <string name="d_mail">Email</string>
    <string name="d_mail_value">bagasd811@gmail.com</string>
    <string name="d_user">Username</string>
    <string name="d_user_value">Bagas Dwi Anggoro</string>
    <string name="links">Get in Touch</string>
    <string name="ref">Reference</string>
    <string name="ref_one">https://www.arknights.global/</string>
    <string name="ref_two">https://arknights.fandom.com/wiki/Lone_Trail</string>
    <string name="a_one">Archive 01.</string>
    <string name="a_two">Archive 02.</string>
    <string name="a_three">Archive 03.</string>
    <string name="a_four">Archive 04.</string>
    <string name="a_five">Archive 05.</string>
    <string name="a_six">Archive 06.</string>
    <string name="a_seven">Archive 07.</string>
    <string name="a_eight">Archive 08.</string>
    <string name="a_nine">Archive 09.</string>
    <string name="a_ten">Archive 10.</string>
    <string name="s_one">Ad Astra</string>
    <string name="s_two">Control\'s Wishes</string>
    <string name="s_three">The Coming of\nthe Future</string>
    <string name="s_four">The Sky of\nTrimounts</string>
    <string name="s_five">When the Stars\nGaze Upon Me</string>
    <string name="c_one">Steven Grove</string>
    <string name="c_two">一罐鹽</string>
    <string name="c_three">Eagle Wei</string>
    <string name="title">Content Title</string>
    <string-array name="data_name">
        <item>A Thousand Suns</item>
        <item>Shooting Stars</item>
        <item>The Great Halt</item>
        <item>And Beyond</item>
        <item>The First Launch</item>
        <item>Borderless Hades</item>
        <item>Goodnight Terra</item>
        <item>Truth For Loners</item>
        <item>Sweat Dream</item>
        <item>Soundtracks</item>
    </string-array>
    <string-array name="data_photos">
        <item>@drawable/a_thousand_suns</item>
        <item>@drawable/shooting_stars</item>
        <item>@drawable/the_great_halt</item>
        <item>@drawable/and_beyond</item>
        <item>@drawable/the_first_launch</item>
        <item>@drawable/the_borderles_hades</item>
        <item>@drawable/goodnight_terra</item>
        <item>@drawable/truth_for_loners</item>
        <item>@drawable/sweat_dream</item>
        <item>@drawable/ost</item>
    </string-array>
    <string name="d1">A month ago, the Site 359 incident almost created havoc in Trimounts, but everything seems right under control in its aftermath… until Kristen Wright suddenly disappeared without a trace half a month later. Not only she hid herself so deep that no one could ever find her, but she even severed her communication with the outside world. Only a handful of Rhine Lab seniors knew her whereabouts, but were strongly reticent about the secret. The whole of R.L. suddenly fell into panic, prompting Saria to hurry back to Trimounts.\n\nBut perhaps the one who was more anxious than the rest is the Columbian Department of Defense. For two years ago (Terran year 1097), Kristen had been secretly collaborating with the DOD to conduct the Project Horizon Arc – a massive superweapon program that could easily surpass every Terran nation. Under this project, R.L. and the military have built the Arc-0I, a ring-shaped floating station launched by its energy source, the S.H.A.F.T., which will then send out laser beams upon its target in mid-air through its focus generator, the H.A.M.H.R.R. However, with Kristen having gone missing just before its official launch, the local military feared that Kristen could foolishly use such destructive weaponry against the country. So, Blake the \"Colonel\" and Ferdinand Clooney, who sought temporary refuge in the DOD, vow to stop its launch before it brings utter destruction to Columbia.</string>
    <string name="d2">Before the official launch, there was a small test flight for the prototype H.A.M.H.R.R. around the mobile plate where the Arc-0I was built. However, a malfunction caused the aircraft to crash onto a section of Triton Factory. Believing that the site is where Kristen was hiding, the Union Army soldiers have the site and the surrounding areas locked down. Meanwhile, Silence has successfully infiltrated the area amidst the angry crowds. But to her surprise, Saria too is present in the factory together with the Tin Man, and her suspicion on Saria grows greatly. As she continues her search, she meets Jara, the director of Rhine Lab\'s H.R. Investigation Section, who assisted her in searching for the lost Transmitters through her new outfit built with the Transmitters\' sensory devices. The Transmitters\' eventually lead her to Parvis\' lab, but the mentor and former disciple do not speak much as the latter questions the former\'s involvement in this incident.</string>
    <string name="d3">A few days later, Conrad Jackson, the current Vice President of Columbia, makes a visit to R.L. as part of his campaign for his election, surprising everyone in Trimounts amidst the confusing chaos. While R.L.\'s tightened security had ensured his safety, danger is still looming around. As part of the deep political struggle between the Federal Government and the DOD, Blake feared that the Vice President will become a threat to the Project Horizon Arc if he meddled in, hence dethroning the Union Army from their former glory. The soldiers planned to assassinate the Vice President by splashing acidic liquids on him, but they were easily suppressed by Maylander\'s agents and the Doctor\'s gang. Even Ferdinand stepped in by sending several power armors to halt the soldiers from tarnishing R.L.\'s name. Desperately, they destroyed liquified Originium pipelines as final resorts but utterly failed. The Vice President is safe and sounds thanks to Jara\'s intel, and she promised him that the headline tomorrow would not be the repeat of the Triton incident.</string>
    <string name="d4">Blake and the soldiers were almost driven to madness due to their failure, and Ferdinand seemingly intended to use a threatened Jara to reveal Kristen\'s hideout through her relationship with Maylander. Just then, Silence volunteered herself to both sides by injecting the Transmitters into her body, hence becoming a \"Hub.\" As they follow Silence\'s tracking, they were greatly dumbfounded by the fact that Kristen\'s hideout was actually in the city\'s enormous junkyard covered by anti-Arts detectors, and the wastewater pipelines that run through the yard seemed to be energy siphons from the S.H.A.F.T., which was currently under the Army\'s control, to the H.A.M.M.R. Just the soldiers were about to land onto the junkyard, they faced tornadoes created by Ho\'olheyak\'s Arts to delay them before the launch. Even when Saria personally breaks her way to the H.A.M.M.R. by taking down Ho\'olheyak, she is too late to stop its launch. Nevertheless, Saria and Silence met again briefly and head on towards their own goal while promising each other to survive the chaos for the sake of truth.</string>
    <string name="d5">November 22, 1099, the night sky of Trimount was suddenly brightened by the combustion of Arc-01. Now, the DOD and the Federal Government had to form an uneasy alliance to take down the hijacked station at all cost. Military aircrafts fired their missiles endlessly onto Arc-01, but it only keeps on lifting up. The soldiers attempted to cut down its energy in the S.H.A.F.T., but to their horror, not only it keeps on charging, but the meter has gone beyond its energy readings. Upon reaching 5,000 meters above sea level, however, it stopped and recharged its energy from the ground. Deeming it to be the only way to take down Arc-01, soldiers risked their lives in high-altitude flight to land onto the station.</string>
    <string name="d6">On the Doctor\'s side, they were heading towards an ancient underground ruin beneath Trimounts which Kal\'tsit believed to be the source of Kristen\'s project. While they came under Ho\'olheyak\'s harassment, the undead Tin Man finally showed up to have a showdown with her. With that said, the two continued their journey towards the ruins.\nTo the Doctor\'s bewilderment, The ruin was filled with numerous Sarcophagi dumbfounding his thoughts – the ancient device they were woken up from back in Chernobog, and inside each Sarcophagus is a human being resembling them. However, their arrival woke up the \"god\" of the ruin: Trevor Friston the Preservator, a dying human-like artificial intelligence hailing from the ancient previous civilization. For millennia, he has been guarding them alone while hoping that those inside the Sarcophagi will awake and rebuild their civilization, but his loneliness has led to his desperation. Seeing that there was no hope to wake them up again, he sacrificed himself by revealing as much knowledge as he can to Kristen. In turn, the Sarcophagi will act as the \"Hall of Stasis\" for Arc-01, an alternative powerhouse built beyond the knowledge of Originium Arts, hence allowing Arc-01 to unleash lasers that penetrate the Starpod whilst fooling the Union Army from severing the energy source.</string>
    <string name="d7">Saria fought her way bitterly to the Galleria Stellaria – the heart of Arc-01 — while withstanding the weightless environment. Under the glittering stars recreated by the hall, Saria and Kristen finally met again for a final showdown. Together with the \"Perturbation System\" that replicates the stars\' orbits, Kristen proves to be a challenging foe despite Saria\'s calcification Arts. Yet, Saria wanted to bring Kristen back to the ground as she believed her \"suicide\" will only bring disaster onto Terra. Nevertheless, Kristen deemed that time is indeed running out for the Terran civilization. However, just before Saria could bring her back, Kristen fooled her by pulling off the emergency exit just right beneath Saria.</string>
    <string name="d8">Following the Doctor\'s departure from the Hall of Stasis, Ho\'olheyak quietly sneaked into the ruin to seek for her own truth after escaping from Maylander\'s pursuit. Venerating the dying Preservator as her \"god,\" she yearned for his \"omnipotent\" knowledge being blessed onto her, but the \"truth\" she finds is beyond her imagination. Thanks to her staff, Friston\'s consciousness survived the deleting process, and she casually handed it to Kal\'tsit instead of the Tin Man and Maylander.\nDespite the threats, Maylander received an order from the President of Columbia to spare them and quietly retreat. Without Kal\'tsit\'s knowledge, they have been supervised by President Mark Max, the super A.I. that runs the country behind the scene. While he put high hope on R.I. to \"revive\" Friston, his \"father,\" he also openly declared himself to surpass the \"Preservator\" by becoming Terra\'s \"sword and shield,\" agitating Kal\'tsit to destroy his surveillance cameras.</string>
</resources>