<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatorProfile">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="11dp"
        android:background="@color/android:transparent">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:paddingTop="8dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/android:transparent"
            android:src="@drawable/back"/>

        <ImageView
            android:layout_width="96dp"
            android:layout_height="55dp"
            android:src="@drawable/app_logo"/>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="65dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="22dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="162dp"
                android:layout_marginVertical="25dp">

                <TextView
                    android:id="@id/title"
                    style="@style/H2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/creator_title"/>

                <TextView
                    android:id="@+id/creator_title"
                    style="@style/H1"
                    android:paddingTop="9dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title"
                    android:text="@string/creator_name"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="36sp"
                    android:fontFamily="sans-serif-black"
                    android:textColor="#A3A397"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/creator_title"
                    android:text="@string/creator_pen_name"/>

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="145dp"
                    android:layout_height="162dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:shapeAppearanceOverlay="@style/RoundedImageViewShape"
                    android:src="@drawable/profile"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="#BDBDBD"
                android:layout_marginTop="15dp"/>

            <TextView
                style="@style/H2"
                android:paddingTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"/>

            <TextView
                style="@style/H3"
                android:textColor="#F5F5E4"
                android:paddingTop="9dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_details"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="#BDBDBD"
                android:layout_marginTop="25dp"/>

            <TextView
                style="@style/H2"
                android:paddingTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dicoding"/>

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="9dp">

                    <TextView
                        style="@style/H3"
                        android:textColor="#F5F5E4"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="@string/d_user"/>

                    <TextView
                        style="@style/H3"
                        android:textColor="#F5F5E4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/d_user_value"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="9dp">

                    <TextView
                        style="@style/H3"
                        android:textColor="#F5F5E4"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="@string/d_mail"/>

                    <TextView
                        style="@style/H3"
                        android:textColor="#F5F5E4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/d_mail_value"/>

                </TableRow>

            </TableLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="#BDBDBD"
                android:layout_marginTop="25dp"/>

            <TextView
                style="@style/H2"
                android:paddingTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/links"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="14dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/github"
                    android:layout_width="46dp"
                    android:layout_height="54dp"
                    android:backgroundTint="#101010"
                    android:layout_marginEnd="6dp"
                    app:icon="@drawable/github"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    app:iconSize="24dp"
                    style="?attr/materialButtonStyle" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/facebook"
                    android:layout_width="46dp"
                    android:layout_height="54dp"
                    android:backgroundTint="#101010"
                    android:layout_marginEnd="6dp"
                    app:icon="@drawable/facebook"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    app:iconSize="24dp"
                    style="?attr/materialButtonStyle" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/dribbble"
                    android:layout_width="46dp"
                    android:layout_height="54dp"
                    android:backgroundTint="#101010"
                    android:layout_marginEnd="6dp"
                    app:icon="@drawable/dribbble"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    app:iconSize="24dp"
                    style="?attr/materialButtonStyle" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/behance"
                    android:layout_width="46dp"
                    android:layout_height="54dp"
                    android:backgroundTint="#101010"
                    android:layout_marginEnd="6dp"
                    app:icon="@drawable/behance"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    app:iconSize="24dp"
                    style="?attr/materialButtonStyle" />

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="#BDBDBD"
                android:layout_marginTop="15dp"/>

            <TextView
                style="@style/H2"
                android:paddingTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ref"/>

            <TextView
                style="@style/H3"
                android:textColor="#F5F5E4"
                android:paddingTop="9dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ref_one"/>

            <TextView
                style="@style/H3"
                android:textColor="#F5F5E4"
                android:paddingTop="9dp"
                android:paddingBottom="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ref_two"/>

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>