<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="14dp"
        android:background="@color/android:transparent">

        <ImageView
            android:layout_width="96dp"
            android:layout_height="55dp"
            android:src="@drawable/app_logo"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/H1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="22dp"
                android:layout_marginTop="20dp"
                android:text="@string/overview" />

            <TextView
                style="@style/H3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="22dp"
                android:layout_marginTop="25dp"
                android:text="@string/details"
                android:textColor="#A3A397" />

            <TextView
                style="@style/H2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="22dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="12dp"
                android:text="@string/subtitle" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_heroes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="30dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>